[package]
name    = "aes-sid"
version = "0.0.0"
description = """
Authenticated encryption for the 64-bit integer range using techniques from
the AES-SIV (i.e. AES-CTR + AES-CMAC) construction, with 128-bit ciphertexts.
Useful for encrypting database primary keys or other 64-bit identifiers with
tamper-detecting ciphertexts small enough to fit in a UUID.
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
edition    = "2018"
license    = "Apache-2.0 OR MIT"
readme     = "README.md"
repository = "https://github.com/tarcieri/aes-sid"
categories = ["cryptography", "no-std"]
keywords   = ["aes", "id", "encryption"]

[dependencies]
aes = { version = "0.3", optional = true }
block-cipher-trait = "0.6"
cmac = "0.2"
crypto-mac = { version = "0.7", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = "1"

[features]
default = ["aes"]
